--- a/.github/workflows/check_urls.yml
+++ b/.github/workflows/check_urls.yml
@@ -45,6 +45,7 @@ jobs:
           --accept=200,403,429
           --verbose
           --no-progress
+          --root-dir=${{ github.workspace }}
           ${{ steps.changed-files.outputs.changed_files_list }}
         fail: true
         failIfEmpty: false
