App: Fix Endoscopy Tool Tracking compatibility on IGX OS host environment (#1093)
* Op: slang_shader_op fixups for CUDA Toolkit 12.0+ compatibility

Followup to 4ae73c0ef67e648f10db8fd9e063c36313c1070d with additional
fixes to remove dependency on CUDA Runtime 12.8+ APIs.

Verified compilation stage completes on IGX OS 1.1.2 host with NVCC 12.2

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Op: Add slang_shader_op check for minimum compiler version

Reflects observed GLIBC and GLIBCXX errors when building with gcc < 13:

```
/usr/bin/ld: .../holohub-internal/build/endoscopy_tool_tracking/_deps/slang-src/lib/libslang.so: undefined reference to `fmodf@GLIBC_2.38'
```

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* App: Make slang_shader_op optional in Endoscopy Tool Tracking

SlangShaderOp is not supported on some target bare metal platforms such
as IGX OS 1.1.2. Update the Endoscopy Tool Tracking application to
re-enable building and running without SlangShaderOp on target platforms
not meeting SlangShaderOp build requirements.

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Address review comments

- Revert to cudaStream_t which is available in CUDA Runtime >=12.0
- Revert spurious `emplace_back` change in favor of CUlibrary type fix

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

---------

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/operators/slang_shader/cpp/CMakeLists.txt
+++ b/operators/slang_shader/cpp/CMakeLists.txt
@@ -15,6 +15,12 @@
 
 cmake_minimum_required(VERSION 3.20)
 
+
+# Check minimum required GCC version for Slang release package
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND (CMAKE_C_COMPILER_VERSION VERSION_LESS "13.0.0" OR CMAKE_CXX_COMPILER_VERSION VERSION_LESS "13.0.0"))
+    message(FATAL_ERROR "GCC version ${CMAKE_CXX_COMPILER_VERSION} is too old. Need GCC 13.0.0 or newer to compile with libslang.so.")
+endif()
+
 # Fetch Slang
 include(FetchContent)
 FetchContent_Declare(
@@ -67,6 +73,7 @@ target_link_libraries(slang_shader
 target_include_directories(slang_shader INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_compile_definitions(slang_shader PRIVATE HOLOSCAN_MAJOR_VERSION=${holoscan_VERSION_MAJOR})
 target_compile_definitions(slang_shader PRIVATE HOLOSCAN_MINOR_VERSION=${holoscan_VERSION_MINOR})
+target_compile_definitions(slang_shader PUBLIC HOLOSCAN_OP_SLANG_SHADER)
 
 install(TARGETS slang_shader
   COMPONENT holoscan-ops
