Add support for mermaid in holohub website
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/doc/website/requirements.txt
+++ b/doc/website/requirements.txt
@@ -10,5 +10,6 @@ mkdocs-include-dir-to-nav
 mkdocs-literate-nav
 mkdocs-site-urls
 mkdocs-git-revision-date-localized-plugin
+mkdocs-mermaid2-plugin
 mike
 mistune
