--- a/doc/website/mkdocs.yml
+++ b/doc/website/mkdocs.yml
@@ -56,6 +56,9 @@ plugins:
         - scripts/generate_pages.py
   - macros
   - tags
+  - mermaid2:
+      arguments:
+        theme: default
   - mike:
       # These fields are all optional; the defaults are as below...
       alias_type: copy
@@ -98,6 +101,11 @@ markdown_extensions:
       check_paths: true
       restrict_base_path: False
       base_path: "."
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
