--- a/.github/workflows/check_urls.yml
+++ b/.github/workflows/check_urls.yml
@@ -46,6 +46,7 @@ jobs:
           --verbose
           --no-progress
           --root-dir=${{ github.workspace }}
+          --remap='(file://.*)/holoscan-sdk/(.*) https://github.com/nvidia-holoscan/holoscan-sdk/tree/main/$2'
           ${{ steps.changed-files.outputs.changed_files_list }}
         fail: true
         failIfEmpty: false
@@ -62,6 +63,7 @@ jobs:
           --verbose
           --no-progress
           --root-dir=${{ github.workspace }}
+          --remap='(file://.*)/holoscan-sdk/(.*) https://github.com/nvidia-holoscan/holoscan-sdk/tree/main/$2'
           '${{ github.workspace }}/**/*.md'
           '${{ github.workspace }}/**/*.html'
           '${{ github.workspace }}/**/*.rst'
