Enhance Rivermax RX manager to support multiple streams per thread
Enhanced the Rivermax manager to support multiple streams on the same
thread with stream-specific packet processing and queueing capabilities.

Key changes:
- Enhanced RDK applications (ipo_receiver and rtp_receiver) to get an
  extension to RDK AppSetting in order to set threads setting. Each
  thread has it's dedicated core, ID and streams settings.
- Enhanced burst manager to support per-stream ID burst queues. (Each
  stream ID gets its own dedicated burst queue for packet segregation).
- Maintained backward compatibility: bench RX processes bursts
  regardless of stream ID.

Signed-off-by: Dana Lessner <dlessner@nvidia.com>

--- a/operators/advanced_network/advanced_network/managers/rivermax/CMakeLists.txt
+++ b/operators/advanced_network/advanced_network/managers/rivermax/CMakeLists.txt
@@ -21,6 +21,7 @@ enable_language(CUDA)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(rivermax_service)
+add_subdirectory(applications)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/rivermax_mgr_impl)
 
