--- a/applications/adv_networking_bench/adv_networking_bench_rivermax_rx.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_rivermax_rx.yaml
@@ -55,26 +55,19 @@ advanced_network:
           - "Data_RX_GPU"
           rivermax_rx_settings:
             settings_type: "ipo_receiver"
-            memory_registration: true
-            #allocator_type: "huge_page_2mb"
             verbose: true
-            max_path_diff_us: 10000
-            ext_seq_num: true
-            sleep_between_operations_us: 0
-            local_ip_addresses:
-              - 2.1.0.12
-              - 2.1.0.12
-            source_ip_addresses:
-              - 2.1.0.12
-              - 2.1.0.12
-            destination_ip_addresses:
-              - 224.1.1.1
-              - 224.1.1.1
-            destination_ports:
-              - 50001
-              - 50002
-            stats_report_interval_ms: 1000
-            send_packet_ext_info: true
+            rx_threads:
+            - thread_id: 0
+              network_settings:
+              - stream_id: 0
+                local_ip_addresses:
+                  - 2.1.0.11
+                source_ip_addresses:
+                  - 2.1.0.12
+                destination_ip_addresses:
+                  - 224.1.1.1
+                destination_ports:
+                  - 50000
 
 bench_rx:
   interface_name: "rx_port" # Name of the RX port from the advanced_network config
