--- a/applications/adv_networking_media_player/adv_networking_media_player.yaml
+++ b/applications/adv_networking_media_player/adv_networking_media_player.yaml
@@ -56,28 +56,23 @@ advanced_network:
           memory_regions: 
           - "Data_RX_CPU"
           - "Data_RX_GPU"
-          rivermax_rx_settings:
-            settings_type: "ipo_receiver"
-            memory_registration: true
-            #allocator_type: "huge_page_2mb"
-            verbose: true
-            max_path_diff_us: 10000
-            ext_seq_num: true
-            sleep_between_operations_us: 0
-            local_ip_addresses:
-              - 2.1.0.12
-            source_ip_addresses:
-              - 2.1.0.12
-            destination_ip_addresses:
-              - 224.1.1.2
-            destination_ports:
-              - 50001
-            stats_report_interval_ms: 3000
-            send_packet_ext_info: true
+          rx_threads:
+          - thread_id: 0
+            network_settings:
+            - stream_id: 0
+              local_ip_addresses:
+                - 2.1.0.11
+              source_ip_addresses:
+                - 2.1.0.12
+              destination_ip_addresses:
+                - 224.1.1.1
+              destination_ports:
+                - 50000
 
 advanced_network_media_rx:
   interface_name: cc:00.1
   queue_id: 0
+  stream_id: 0
   video_format: RGB888
   frame_width: 1920
   frame_height: 1080
