holoscan_ros2 operators
Signed-off-by: Gil Shapira <gshapira@nvidia.com>

--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -27,6 +27,7 @@ add_holohub_operator(fft)
 add_holohub_operator(gamma_correction DEPENDS OPERATORS slang_shader)
 add_holohub_operator(grpc_operators)
 add_holohub_operator(high_rate_psd)
+add_holohub_operator(holoscan_ros2)
 add_holohub_operator(iio_controller)
 add_holohub_operator(low_rate_psd)
 add_holohub_operator(lstm_tensor_rt_inference DEPENDS EXTENSIONS lstm_tensor_rt_inference)
