App: H.264 data download at build time
Attempt to address error where `LD_PRELOAD` fix for runtime H.264 issue blocks NGC
CLI from properly downloading Endoscopy Tool Tracking data at build
time.

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/h264/Dockerfile
+++ b/applications/h264/Dockerfile
@@ -66,6 +66,8 @@ WORKDIR /
 
 RUN /install_dependencies.sh
 
+FROM base as run
+
 # Workaround for reported issue when running Python H264 applications:
 # 2: [warning] [gxf_extension_manager.cpp:174] Unable to load extension from 'libgxf_videodecoder.so' \
 #   (error: /opt/nvidia/holoscan/lib/libgxf_videodecoder.so: undefined symbol: _ZN6nvidia6logger15GlobalGxfLogger8instanceEv)
