App: Update `object_detection_torch` for torchvision symbols
Background: Holoscan SDK v3.6.0 aims to remove torchvision from the
release container. Torchvision is not strictly required for the
Holoinfer Libtorch backend. However, a subsequent issue has been
observed in running the object_detection_torch application.
Investigation has revealed that torchvision symbols must be explicitly
loaded by the executable in order to load the FRCNN ResNet 50 model and
similar PyTorch models.

This change updates the object_detection_torch target to eagerly link in
torchvision library symbols to ensure that the model load succeeds.

Verified the app runs with v3.5.0 and v3.6.0 with Xvfb.

co-authored-by: Frank Lai <frlai@nvidia.com>
co-authored-by: Shekar Dwivedi <shekard@nvidia.com>
Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/object_detection_torch/Dockerfile
+++ b/applications/object_detection_torch/Dockerfile
@@ -38,5 +38,12 @@ COPY utilities /tmp/scripts/utilities/
 RUN chmod +x /tmp/scripts/holohub
 RUN /tmp/scripts/holohub setup && rm -rf /var/lib/apt/lists/*
 
+FROM base as torch
+
 # Install libraries
 RUN pip install torch torchvision
+
+# Set up Holoscan SDK container libtorch to be found with ldconfig for app C++ build and runtime
+RUN echo $(python3 -c "import torch; print(torch.__path__[0])")/lib > /etc/ld.so.conf.d/libtorch.conf \
+    && ldconfig \
+    && ldconfig -p | grep -q "libtorch.so"
