App: Make AJA an optional dependency of object_detection_torch
Remove AJA from the critical path to avoid unnecessary fetch and build
for the default case

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -82,7 +82,7 @@ add_holohub_application(simple_radar_pipeline)
 add_holohub_application(simple_pdw_pipeline DEPENDS
                         OPERATORS basic_network)
 
-add_holohub_application(object_detection_torch DEPENDS OPERATORS aja_source)
+add_holohub_application(object_detection_torch DEPENDS OPERATORS OPTIONAL aja_source)
 
 add_holohub_application(openigtlink_3dslicer DEPENDS OPERATORS openigtlink)
 
