Disabling metadata and lint checks on lws2 branch
Signed-off-by: Julien Jomier <jjomier@nvidia.com>

--- a/.github/workflows/check_metadata.yml
+++ b/.github/workflows/check_metadata.yml
@@ -1,6 +1,10 @@
 name: Check metadata validity
 
-on: [push, pull_request]
+on:
+  push:
+    branches-ignore: [holoscan-sdk-lws2]
+  pull_request:
+    branches-ignore: [holoscan-sdk-lws2]
 
 jobs:
   check-metadata:
