App: Update `object_detection_torchvision` to eagerly link torchvision symbols (#1104)
* App: Make AJA an optional dependency of object_detection_torch

Remove AJA from the critical path to avoid unnecessary fetch and build
for the default case

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* App: Update `object_detection_torch` for torchvision symbols

Background: Holoscan SDK v3.6.0 aims to remove torchvision from the
release container. Torchvision is not strictly required for the
Holoinfer Libtorch backend. However, a subsequent issue has been
observed in running the object_detection_torch application.
Investigation has revealed that torchvision symbols must be explicitly
loaded by the executable in order to load the FRCNN ResNet 50 model and
similar PyTorch models.

This change updates the object_detection_torch target to eagerly link in
torchvision library symbols to ensure that the model load succeeds.

Verified the app runs with v3.5.0 and v3.6.0 with Xvfb.

co-authored-by: Frank Lai <frlai@nvidia.com>
co-authored-by: Shekar Dwivedi <shekard@nvidia.com>
Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Fix copyright check

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Fix copyright header formatting

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Update torchvision interface target linkage per PR feedback

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

---------

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>
Co-authored-by: Frank Lai <frlai@nvidia.com>
Co-authored-by: Shekar Dwivedi <shekard@nvidia.com>

--- a/applications/object_detection_torch/CMakeLists.txt
+++ b/applications/object_detection_torch/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023-2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,6 +19,40 @@ project(object_detection_torch CXX)
 find_package(holoscan 0.6 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
 
+if(holoscan_VERSION GREATER 3.5)
+  # Torchvision is required for loading FRCNN ResNet 50 and similar models
+  # with the Holoinfer Libtorch backend.
+  find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
+
+  execute_process(
+    COMMAND ${Python3_EXECUTABLE} -c "import torch; print(torch.__path__[0])"
+    OUTPUT_VARIABLE TORCH_ROOT_DIR
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+  find_package(Torch PATHS ${TORCH_ROOT_DIR} REQUIRED)
+
+  execute_process(
+    COMMAND ${Python3_EXECUTABLE} -c "import torchvision; print(';'.join(torchvision.__path__))"
+    OUTPUT_VARIABLE TORCHVISION_SEARCH_DIRS
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+  find_library(TORCHVISION_LIBRARY
+    NAMES libtorchvision.so _C.so
+    PATHS ${TORCHVISION_SEARCH_DIRS}
+    PATH_SUFFIXES lib lib64
+    REQUIRED
+  )
+  add_library(torchvision SHARED IMPORTED)
+  set_target_properties(torchvision PROPERTIES
+      IMPORTED_LOCATION "${TORCHVISION_LIBRARY}"
+  )
+  target_link_libraries(torchvision INTERFACE
+    torch
+    Python3::Python
+  )
+  add_library(torchvision::torchvision ALIAS torchvision)
+endif()
+
 add_executable(object_detection_torch
     main.cpp
 )
@@ -32,8 +66,16 @@ target_link_libraries(object_detection_torch
     holoscan::ops::inference
     holoscan::ops::inference_processor
     holoscan::ops::holoviz
-    holoscan::aja
+    $<$<TARGET_EXISTS:holoscan::aja>:holoscan::aja>
 )
+if(holoscan_VERSION GREATER 3.5)
+  # Forcibly link torchvision and its required Python symbols to prevent ResNet runtime import failure
+  target_link_libraries(object_detection_torch
+    PRIVATE
+    torchvision::torchvision
+    "-Wl,--no-as-needed $<TARGET_PROPERTY:Python3::Python,IMPORTED_LOCATION> $<TARGET_PROPERTY:torchvision::torchvision,IMPORTED_LOCATION> -Wl,--as-needed"
+  )
+endif()
 
 # Download the cars sample data
 option(HOLOHUB_DOWNLOAD_DATASETS "Download datasets" ON)
